src/test/ui/parser/issue-67377-invalid-syntax-in-enum-discriminant.stderr
error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:5:42
   |
LL |         V = [PhantomData; { [ () ].len() ].len() as isize,
   |             -             -              ^ mismatched closing delimiter
   |             |             |
   |             |             unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:15:36
   |
LL |         V = [Vec::new; { [].len()  ].len() as isize,
   |             -          -           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:25:36
   |
LL |         V = [Vec::new; { [0].len() ].len() as isize,
   |             -          -           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:5:42
   |
LL |         V = [PhantomData; { [ () ].len() ].len() as isize,
   |             -             -              ^ mismatched closing delimiter
   |             |             |
   |             |             unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:15:36
   |
LL |         V = [Vec::new; { [].len()  ].len() as isize,
   |             -          -           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:25:36
   |
LL |         V = [Vec::new; { [0].len() ].len() as isize,
   |             -          -           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:5:42
   |
LL |         V = [PhantomData; { [ () ].len() ].len() as isize,
   |             -             -              ^ mismatched closing delimiter
   |             |             |
   |             |             unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:15:36
   |
LL |         V = [Vec::new; { [].len()  ].len() as isize,
   |             -          -           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:25:36
   |
LL |         V = [Vec::new; { [0].len() ].len() as isize,
   |             -          -           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:5:42
   |
LL |         V = [PhantomData; { [ () ].len() ].len() as isize,
   |             -             -              ^ mismatched closing delimiter
   |             |             |
   |             |             unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:15:36
   |
LL |         V = [Vec::new; { [].len()  ].len() as isize,
   |             -          -           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:25:36
   |
LL |         V = [Vec::new; { [0].len() ].len() as isize,
   |             -          -           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: aborting due to 12 previous errors

